--- a/style.css
+++ b/style.css
@@ -15,5 +15,20 @@ body {
   background: var(--primary-color);
   color: #fff;
   overflow-x: hidden;
-  padding: 50px;
+  padding-bottom: 50px;
+}
+
+#main-header {
+  background: var(--secondary-color);
+  padding: 4rem 0;
+}
+
+.container {
+  max-width: var(--max-width);
+  margin: 0 auto;
+  text-align: center;
+}
+
+h1 {
+  font-size: 2.3rem;
 }
